Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.004003, see misc/*.deps* for details
 - develop: +3 -1 (suggests: ↑1)

0.004003 2015-06-19T04:15:00Z c32e093
 [Checks]
 - make LMU-using dists obvious so I can consider if avoiding it is warranted.
 - This is not a certainty of removal, simply me acting as a proxy for other peoples concerns, for in cases where I'm
   indifferent, I defer to the concerns of others.
 - For instance, the closer my code is to the upstream of the river, the more likely I'll elect to avoid it.

 [Dependencies::Stats]
 - Dependencies changed since 0.004002, see misc/*.deps* for details
 - develop: ↑2 (suggests: ↑2)

0.004002 2015-03-01T08:13:27Z fce9161
 [Checks]
 - recommend builds instead of build/master

 [Dependencies::Stats]
 - Dependencies changed since 0.004001, see misc/*.deps* for details
 - configure: ↓1 (recommends: ↓1)
 - develop: +3 ↑2 (recommends: ↓1, suggests: ↑1)
 - runtime: ↓1 -1 (recommends: +2)
 - test: ↓1 (recommends: ↓2)

0.004001 2014-12-10T10:06:39Z bec44ae
 [Checks]
 - Cry about autobox and friends.

 [Dependencies::Stats]
 - Dependencies changed since 0.004000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: -1 (recommends: ↑1, suggests: ↑2)
 - test: (recommends: ↑2)

0.004000 2014-10-30T12:33:06Z 66bb186
 [Checks]
 - Test dist.ini.meta has a syntax vim statement, because vim doesn't autodetect that filetype.

 [Dependencies::Stats]
 - Dependencies changed since 0.003006, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑1 -1 (recommends: +1, suggests: ↑2)
 - runtime: +1 -1
 - test: +1 (recommends: ↑2)

 [Internals]
 - Inline package _Assertions now replaced with externalised Generic::Assertions

0.003006 2014-09-27T07:03:04Z
 [Checks]
 - Make sure weaver_ini_ok runs
 - Double-check that -Encoding is not specified.

0.003005 2014-09-25T16:09:00Z
 [Dependencies::Stats]